# touchscreen

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pr_check.yml
src/: lib.rs  red_screen.rs  sdl_screen.rs  web_screen.rs  xpt2046_screen.rs  xpt_screen.rs
src/xpt_screen/: xpt2046.rs
xpt2046/: Cargo.toml
xpt2046/src/: lib.rs
