[package]
name = "touchscreen"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics-core = "0.3.3"

embedded-hal = { version = "1.0.0-rc.1", optional = true }

wasm-bindgen = { version = "0.2.88", optional = true }
embedded-graphics-web-simulator = { version = "^0.3.0", optional = true }
web-sys = { version = "^0.3.64", features = [ 'Document', 'Element', 'HtmlElement', 'MouseEvent', 'Window' ], optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.10.0-rc.1", features = ["eh1"] }

[features]
red-screen = ["dep:embedded-hal"]
web-screen = ["dep:wasm-bindgen", "dep:embedded-graphics-web-simulator", "dep:web-sys"]
