[package]
name = "touchscreen"
authors = ["Tommy Gilligan"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Decorates embedded-graphics to enable touch interactivity"
homepage = "https://github.com/tommy-gilligan/touchscreen"
repository = "https://github.com/tommy-gilligan/touchscreen.git"
documentation = "https://docs.rs/touchscreen/latest/touchscreen/"

[dependencies]
embedded-graphics-core = "0.4"

embedded-hal = { version = "1.0.0-rc.1", optional = true }

wasm-bindgen = { version = "0.2.88", optional = true }
embedded-graphics-web-simulator = { git = "https://github.com/rahul-thakoor/embedded-graphics-web-simulator.git", optional = true }
web-sys = { version = "^0.3.64", features = [ 'Document', 'Element', 'HtmlElement', 'MouseEvent', 'Window' ], optional = true }

embedded-graphics-simulator = { git = "https://github.com/embedded-graphics/simulator.git", optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.10.0-rc.1", features = ["eh1"] }

[features]
xpt2046-screen = ["dep:embedded-hal"]
web-screen = ["dep:wasm-bindgen", "dep:embedded-graphics-web-simulator", "dep:web-sys"]
sdl-screen = ["dep:embedded-graphics-simulator"]
